# pieBot

./: .env.example  .gitignore  .gitmodules  Makefile  pytest.ini
.github/workflows/: ci.yml
apps/server/: __init__.py  audit.py  main.py  orchestrator.py
apps/server/models/: __init__.py  null_model.py
configs/: router.yaml  server.yaml
contracts/: model_backend_ipc.json
docs/: ARCHITECTURE_MAP.md  CONTRACTS.md  PROJECT_OVERVIEW.md  PROVENANCE.md  SECURITY_POSTURE.md
rust/: Cargo.toml
rust/crates/audit_log/: Cargo.toml
rust/crates/audit_log/src/: lib.rs
rust/crates/audit_spec/: Cargo.toml
rust/crates/audit_spec/src/: lib.rs
rust/crates/common/: Cargo.toml
rust/crates/common/src/: lib.rs
rust/crates/control_cli/: Cargo.toml
rust/crates/control_cli/src/: main.rs
rust/crates/control_cli/tests/: test_episodes_cli.rs
rust/crates/episodes/: Cargo.toml
rust/crates/episodes/src/: lib.rs
rust/crates/openmemory_mirror/: Cargo.toml
rust/crates/openmemory_mirror/src/: client.rs  lib.rs  payload.rs
rust/crates/providers/: Cargo.toml
rust/crates/providers/src/: lib.rs
rust/crates/redaction/: Cargo.toml
rust/crates/redaction/src/: lib.rs
scripts/: __init__.py  init_gsama_state.py  replay_audit.py  setup_runtime.py
scripts/ci/: check_repo.py
tests/: __init__.py  test_audit_log.py  test_audit_replay.py  test_core_codec.py  test_git_apply_patch.py  test_gsama_adapter.py  test_model_router.py  test_orchestrator_pipeline.py  test_orchestrator_tick.py  test_policy_engine.py  test_tool_result_store.py  test_tools_registry.py  test_vendor_import_fence.py  test_working_memory.py
