[package]
name = "pie_control_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pie-control"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"

pie_redaction = { path = "../redaction" }
pie_audit_log = { path = "../audit_log" }
pie_audit_spec = { path = "../audit_spec" }
pie_common = { path = "../common" }
pie_providers = { path = "../providers" }
pie_episodes = { path = "../episodes" }
pie_openmemory_mirror = { path = "../openmemory_mirror" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"