[package]
name = "pie_openmemory_mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

pie_episodes = { path = "../episodes" }
pie_common = { path = "../common" }